pokemon/pokedex/src/styles.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Russo+One&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Russo+One&family=VT323&display=swap');

/* @tailwind base;
@tailwind components;
@tailwind utilities; */

 @font-face {
    font-family: 'CustomFont';
    src: url('./fonts/PokemonFont.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
 }
@layer components{
    /*
    custom scrollbar
    not supported by firefox
    */
    .cards::-webkit-scrollbar-thumb{
        border-radius: .5rem;
        background-color: #0075BE !important;
    }
    .cards::-webkit-scrollbar {
        width: 1vw;
      }
      
      
      
     
    .searchCont{
        height: 100vh;
        background: #FCF6ED;
        /* overflow-y: hidden !important; */
        /* background-color:hsla(120,56%,94%,1);
        background-image:
        radial-gradient(at 83% 73%, hsla(130,82%,67%,1) 0px, transparent 50%),
        radial-gradient(at 9% 76%, hsla(142,38%,63%,1) 0px, transparent 50%); */
    }
    .hero{
        position: fixed;
        width: 95vh;
        height: 95vh;
        margin:auto; 
    }
    .search{
        margin-bottom:5vh !important;
        
    }
    /*
    do not change
    logo needs to be responsive 
    */
    .logo{
        height: auto !important;
        width: 20vw!important;
        background-size: cover;
        object-fit: fill;
        position: fixed;
        top:2.5vh;
        margin-bottom: 10vh;
    
    }
    .filterCont{
        position: absolute;
        width: 20vw;
        height: 95vh;
        top:10vh !important;
        right:75vw;
        border-radius: 2rem;
        overflow-y: visible;
    }
    .filterCont>.row{
        position: absolute;
        text-align: left !important;
        margin-top: 15vh;
    }
   
    .cards{
        
        overflow-x: hidden;
        padding: 3%;
        padding-right: 4%;
        overflow-y: scroll;
        display: grid !important;
        grid-template-columns: repeat(7, minmax(0, 1fr)) !important;

        grid-gap:.5rem !important; 
        width: 70vw;
        margin:auto ;
        height: auto;
        max-height: 90vh;
        text-align: center;
        bottom: 5vh !important;
        border-radius: 1.2rem;
        position: fixed;
        left:25vw;
        bottom: 0vh;
        top:5vh;
        background: transparent;
        
        
     
    }
 
    .card{
        /* background: white; */
        align-items: center;
        justify-content: center;
        padding: 1%;
        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
        width: 8vw !important;
        max-width: 12vw !important;
        margin:auto; 
        height: 10vh;
        min-height: 10vh !important;
        border-radius: .5rem;
        white-space: nowrap;
        /* background: #ADF3FF !important ; */
        
      
    }
    .hoverCont{
        /* background: white; */
        padding: .5rem;

       object-fit: contain;
       height: 100%;
       max-height: 15vh;
       width: 10vw !important;
       max-width: 10vw !important;
       margin:auto;
       background: transparent !important;
        
   }
    img.pfp{
        object-fit: contain;
        height: 100%;
        max-height: 10vh;
        width: 10vw !important;
        margin:auto;
        text-align: center;
        margin:auto;
        position: relative;
        background: transparent !important;
        top:-2.5vh!important;
       
}    
  
    .name{
        flex-direction: row;
        font-family: "VT323", monospace;
        font-size: 1.5rem;
        color:black; 
        /* bottom: 2vh !important; */
        /* color:#0075BE; */
        -webkit-text-stroke-width: .01rem;
        -webkit-text-stroke-color: black;
        position: relative;
        top: -5vh !important;
        
    }
 
    .hoverCont:hover{
        overflow: visible;
        border-radius: .5rem;
    
        --s: 2rem; /* the size on the corner */
        --t: .5rem;  /* the thickness of the border */
        --g: 5vw; /* the gap between the border and image */
        
        outline: var(--t) solid #FC6471; /* the color here */
        outline-offset: calc(-1*var(--t));
        mask:
          conic-gradient(at var(--s) var(--s),#0000 75%,#000 0)
          0 0/calc(100% - var(--s)) calc(100% - var(--s)),
          linear-gradient(#000 0 0) content-box;
        transition: .4s;
        width: 22vw !important;

        
        
        
    }
    /* .card:hover{
        background: #FFF570;
    } */

   
    .card.water, .card.ice, .card.steel{
       
        /* background:radial-gradient(at at 10% 96%, #96D9D6  0px, transparent 100%);         */
        color:#69bfb5;
        

    }
    .card.poison, .card.flying, .card.psychic, .card.fairy, .card.ghost, .card.electric{
        color:#AC8BAF;
        
         
       

    }
    .card.normal, .card.grass, .card.bug{
      
        color:#73b566;

        
        
        /* -webkit-backdrop-filter: blur(10px);
        border: 1px solid rgba(255, 255, 255, 0.3); */
        

    }
    .card.fire, .card.fighting, .card.ground, .card.rock{
        color:#F96E46;
        
        /* box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
        backdrop-filter: blur(10px);  */
        /* -webkit-backdrop-filter: blur(10px);
        border: 1px solid rgba(255, 255, 255, 0.3); */

    }
    .card[id=steel], .card[id=dark], .card[id=bug]{
        color:#EDBF85;
        
        
        /* -webkit-backdrop-filter: blur(10px);
        border: 1px solid rgba(255, 255, 255, 0.3); */

    }
    .pokefont{
        font-family: 'Pokemon';
        font:'Pokemon';
        color:blue !important;
    }
}

